[package]
name = "calt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
# chumsky = "0.9.3"
logos = "0.14.0"
chumsky = { git = "https://github.com/zesterer/chumsky.git", branch = "main", commit = "902a047108ee23c06d212b7194c6ebfb15c184ab", features = ["label", "pratt"]}

